[gd_scene load_steps=2 format=3 uid="uid://cryx3kemuqal5"]

[ext_resource type="Script" uid="uid://de4ev35gl6eti" path="res://Scripts/General Scripts/Authentication.gd" id="1_j207b"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j207b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -81.5
offset_right = 54.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 0.5)

[node name="StateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Not Logged In"

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="NicknameLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "NickName"

[node name="LogInButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Log In "

[node name="SignUpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign Up"

[node name="LB" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/LogInButton" to="." method="_on_log_in_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
